Added all menu items

--- a/index.html
+++ b/index.html
@@ -26,6 +26,37 @@
         <h3>THEATRE BAR</h3>
         <p>Angus beef burger served in a soft bap with a variety of salads, cheeses and skinny fries</p>
       </li>
+      <li class="menu-item">
+        <h3>BISTRO</h3>
+        <p>Spanish style chicken with cannellini beans and rice</p>
+      </li>
+      <li class="menu-item">
+        <h3>VEGETARIAN</h3>
+        <p>Garlic roast Portobello mushroom and leek pasta bake served with garlic bread and salad</p>
+      </li>
+      <li class="menu-item">
+        <h3>CLASSIC</h3>
+        <p>Melting middle fishcake</p>
+      </li>
+      <li class="menu-item">
+        <h3>HOME COOKED</h3>
+        <p>Lamb and vegetable stew with herb dumplings and rice</p>
+      </li>
+      <li class="menu-item">
+        <h3>JACKET FILLING</h3>
+        <p>Cold fillings: available from salad bar<br/>
+            Hot filling of the day</p>
+      </li>
+      <li class="menu-item">
+        <h3>PLAIN & SIMPLE</h3>
+        <p>Grilled fillet of seabream or pork and apple sausage</p>
+      </li>
+      <li class="menu-item">
+        <h3>ACCOMPANIMENTS</h3>
+        <p>Roast new potato<br/>
+           Steamed broccoli<br/>
+           Mixed seasonal vegetables</p>
+      </li>
     </ul>  
   </body>
 </html>
