--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Merchant Square Lunch Menu</title>
     <link rel='stylesheet' href='reset.css'/>
     <link rel='stylesheet' href='style.css'/>
     <script type='text/javascript' src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
     
     <script src='script.js'></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	
   <body>
