Add a second day and show/hide on click
Include a ‘tomorrow’ on the menu with a way to view today or tomorrow.

--- a/index.html
+++ b/index.html
@@ -13,51 +13,107 @@
 	
   <body>
     <img src="logo.png" alt="Merchant Square Menu logo" />
-    <h2>TODAY</h2>
-    <ul>  
-      <li class="menu-item">
-        <h3>SOUP</h3>
-        <p>M&S Country Vegetables</p>
-      </li>
-      <li class="menu-item">
-        <h3>SOUP</h3>
-        <p>Creamy seafood chowder</p>
-      </li>
-      <li class="menu-item">
-        <h3>THEATRE BAR</h3>
-        <p>Angus beef burger served in a soft bap with a variety of salads, cheeses and skinny fries</p>
-      </li>
-      <li class="menu-item">
-        <h3>BISTRO</h3>
-        <p>Spanish style chicken with cannellini beans and rice</p>
-      </li>
-      <li class="menu-item">
-        <h3>VEGETARIAN</h3>
-        <p>Garlic roast Portobello mushroom and leek pasta bake served with garlic bread and salad</p>
-      </li>
-      <li class="menu-item">
-        <h3>CLASSIC</h3>
-        <p>Melting middle fishcake</p>
-      </li>
-      <li class="menu-item">
-        <h3>HOME COOKED</h3>
-        <p>Lamb and vegetable stew with herb dumplings and rice</p>
-      </li>
-      <li class="menu-item">
-        <h3>JACKET FILLING</h3>
-        <p>Cold fillings: available from salad bar<br/>
-            Hot filling of the day</p>
-      </li>
-      <li class="menu-item">
-        <h3>PLAIN & SIMPLE</h3>
-        <p>Grilled fillet of seabream or pork and apple sausage</p>
-      </li>
-      <li class="menu-item">
-        <h3>ACCOMPANIMENTS</h3>
-        <p>Roast new potato<br/>
-           Steamed broccoli<br/>
-           Mixed seasonal vegetables</p>
-      </li>
-    </ul>  
+    <div id="monday">
+      <div id="nav">
+        <h2>TODAY</h2>
+        <div class="arrow" id="right-arrow">>></div>
+      </div>
+      <ul>  
+        <li class="menu-item">
+          <h3>SOUP</h3>
+          <p>M&S Country Vegetables</p>
+        </li>
+        <li class="menu-item">
+          <h3>SOUP</h3>
+          <p>Creamy seafood chowder</p>
+        </li>
+        <li class="menu-item">
+          <h3>THEATRE BAR</h3>
+          <p>Angus beef burger served in a soft bap with a variety of salads, cheeses and skinny fries</p>
+        </li>
+        <li class="menu-item">
+          <h3>BISTRO</h3>
+          <p>Spanish style chicken with cannellini beans and rice</p>
+        </li>
+        <li class="menu-item">
+          <h3>VEGETARIAN</h3>
+          <p>Garlic roast Portobello mushroom and leek pasta bake served with garlic bread and salad</p>
+        </li>
+        <li class="menu-item">
+          <h3>CLASSIC</h3>
+          <p>Melting middle fishcake</p>
+        </li>
+        <li class="menu-item">
+          <h3>HOME COOKED</h3>
+          <p>Lamb and vegetable stew with herb dumplings and rice</p>
+        </li>
+        <li class="menu-item">
+          <h3>JACKET FILLING</h3>
+          <p>Cold fillings: available from salad bar<br/>
+              Hot filling of the day</p>
+        </li>
+        <li class="menu-item">
+          <h3>PLAIN & SIMPLE</h3>
+          <p>Grilled fillet of seabream or pork and apple sausage</p>
+        </li>
+        <li class="menu-item">
+          <h3>ACCOMPANIMENTS</h3>
+          <p>Roast new potato<br/>
+             Steamed broccoli<br/>
+             Mixed seasonal vegetables</p>
+        </li>
+      </ul>  
+    </div>
+    <div id="tuesday">
+      <div id="nav">
+        <div class="arrow" id="left-arrow"><<</div>
+        <h2>TOMORROW</h2>
+      </div>
+      <ul>  
+        <li class="menu-item">
+          <h3>SOUP</h3>
+          <p>M&S Tomato & Basil</p>
+        </li>
+        <li class="menu-item">
+          <h3>SOUP</h3>
+          <p>Leek and Potato</p>
+        </li>
+        <li class="menu-item">
+          <h3>THEATRE BAR</h3>
+          <p>Seared minute steak served in a crusty baguette with a choice of salad fillings, sauces and chips</p>
+        </li>
+        <li class="menu-item">
+          <h3>BISTRO</h3>
+          <p>Fish provencale with cous cous</p>
+        </li>
+        <li class="menu-item">
+          <h3>VEGETARIAN</h3>
+          <p>Mixed lentil dahl served with pilau rice, poppadom and a selection of Indian chutneys & pickles</p>
+        </li>
+        <li class="menu-item">
+          <h3>CLASSIC</h3>
+          <p>Quiche selection</p>
+        </li>
+        <li class="menu-item">
+          <h3>HOME COOKED</h3>
+          <p>Chicken satay with egg noodles</p>
+        </li>
+        <li class="menu-item">
+          <h3>JACKET FILLING</h3>
+          <p>Cold fillings: available from salad bar<br/>
+              Hot filling of the day</p>
+        </li>
+        <li class="menu-item">
+          <h3>PLAIN & SIMPLE</h3>
+          <p>Chargrilled chicken or hake</p>
+        </li>
+        <li class="menu-item">
+          <h3>ACCOMPANIMENTS</h3>
+          <p>Lyonnaise potato<br/>
+             Green beans<br/>
+             Mixed seasonal vegetables</p>
+        </li>
+      </ul>  
+    </div>
   </body>
 </html>
