Rename classes, fix styling and centering
Change the names arrow to next and previous day to make them more
generic.
Improve styling to centre text properly when resizing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="monday">
       <div id="nav">
         <h2>TODAY</h2>
-        <div class="arrow" id="right-arrow">>></div>
+        <div class="day-navigation" id="next-day"></div>
       </div>
       <ul>  
         <li class="menu-item">
@@ -66,7 +66,7 @@
     </div>
     <div id="tuesday">
       <div id="nav">
-        <div class="arrow" id="left-arrow"><<</div>
+        <div class="day-navigation" id="previous-day"></div>
         <h2>TOMORROW</h2>
       </div>
       <ul>  
