--- a/index.html
+++ b/index.html
@@ -6,114 +6,33 @@
     <link rel='stylesheet' href='style.css'/>
     <script type='text/javascript' src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-    
-    <script src='script.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.js"></script>
+
+    <script src="javascripts/tabletop.js" type="text/javascript"></script>
+    <script src="javascripts/menu.js" type="text/javascript"></script>
+    <script src='javascripts/script.js' type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
-	
+
   <body>
     <img src="logo.png" alt="Merchant Square Menu logo" />
-    <div id="monday">
-      <div id="nav">
-        <h2>TODAY</h2>
-        <div class="day-navigation" id="next-day"></div>
-      </div>
-      <ul>  
-        <li class="menu-item">
-          <h3>SOUP</h3>
-          <p>M&S Country Vegetables</p>
-        </li>
-        <li class="menu-item">
-          <h3>SOUP</h3>
-          <p>Creamy seafood chowder</p>
-        </li>
-        <li class="menu-item">
-          <h3>THEATRE BAR</h3>
-          <p>Angus beef burger served in a soft bap with a variety of salads, cheeses and skinny fries</p>
-        </li>
-        <li class="menu-item">
-          <h3>BISTRO</h3>
-          <p>Spanish style chicken with cannellini beans and rice</p>
-        </li>
-        <li class="menu-item">
-          <h3>VEGETARIAN</h3>
-          <p>Garlic roast Portobello mushroom and leek pasta bake served with garlic bread and salad</p>
-        </li>
-        <li class="menu-item">
-          <h3>CLASSIC</h3>
-          <p>Melting middle fishcake</p>
-        </li>
-        <li class="menu-item">
-          <h3>HOME COOKED</h3>
-          <p>Lamb and vegetable stew with herb dumplings and rice</p>
-        </li>
-        <li class="menu-item">
-          <h3>JACKET FILLING</h3>
-          <p>Cold fillings: available from salad bar<br/>
-              Hot filling of the day</p>
-        </li>
-        <li class="menu-item">
-          <h3>PLAIN & SIMPLE</h3>
-          <p>Grilled fillet of seabream or pork and apple sausage</p>
-        </li>
-        <li class="menu-item">
-          <h3>ACCOMPANIMENTS</h3>
-          <p>Roast new potato<br/>
-             Steamed broccoli<br/>
-             Mixed seasonal vegetables</p>
-        </li>
-      </ul>  
-    </div>
-    <div id="tuesday">
-      <div id="nav">
-        <div class="day-navigation" id="previous-day"></div>
-        <h2>TOMORROW</h2>
-      </div>
-      <ul>  
-        <li class="menu-item">
-          <h3>SOUP</h3>
-          <p>M&S Tomato & Basil</p>
-        </li>
-        <li class="menu-item">
-          <h3>SOUP</h3>
-          <p>Leek and Potato</p>
-        </li>
-        <li class="menu-item">
-          <h3>THEATRE BAR</h3>
-          <p>Seared minute steak served in a crusty baguette with a choice of salad fillings, sauces and chips</p>
-        </li>
-        <li class="menu-item">
-          <h3>BISTRO</h3>
-          <p>Fish provencale with cous cous</p>
-        </li>
-        <li class="menu-item">
-          <h3>VEGETARIAN</h3>
-          <p>Mixed lentil dahl served with pilau rice, poppadom and a selection of Indian chutneys & pickles</p>
-        </li>
-        <li class="menu-item">
-          <h3>CLASSIC</h3>
-          <p>Quiche selection</p>
-        </li>
-        <li class="menu-item">
-          <h3>HOME COOKED</h3>
-          <p>Chicken satay with egg noodles</p>
-        </li>
-        <li class="menu-item">
-          <h3>JACKET FILLING</h3>
-          <p>Cold fillings: available from salad bar<br/>
-              Hot filling of the day</p>
-        </li>
-        <li class="menu-item">
-          <h3>PLAIN & SIMPLE</h3>
-          <p>Chargrilled chicken or hake</p>
-        </li>
-        <li class="menu-item">
-          <h3>ACCOMPANIMENTS</h3>
-          <p>Lyonnaise potato<br/>
-             Green beans<br/>
-             Mixed seasonal vegetables</p>
-        </li>
-      </ul>  
-    </div>
+    <script id="meal-template" type="text/x-handlebars-template">
+      {{#each this}}
+        <div class="day" id="{{@key}}">
+          <div id="nav">
+            <h2>{{@key}}</h2>
+            <div class="day-navigation" id="next-day"></div>
+          </div>
+          <ul>
+          {{#each this}}
+            <li class="menu-item">
+              <h3>{{type}}</h3>
+              <p>{{name}}</p>
+            </li>
+          {{/each}}
+          </ul>
+        </div>
+      {{/each}}
+    </script>
   </body>
 </html>
